# inverse_kinematics_toolkit

./: .gitignore  README.md
ikt_common/: README.md  package.xml  setup.cfg  setup.py
ikt_common/config/: toolkit_defaults.yaml
ikt_common/ikt_common/: config_manager.py  urdf_loader.py  workspace_utils.py
ikt_core/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
ikt_core/examples/: solve_from_file.py
ikt_core/ikt_core/: __init__.py  api.py  arm_angle.py  assets.py  cli.py  collision.py  ik_core.py  relative.py  robot_model.py  safety.py  tasks.py  urdf_utils.py
ikt_core/ikt_core/urdf/: arm_6dof.urdf  dual_arm.urdf  planar_3r.urdf  srs_7dof.urdf
ikt_core/test/: conftest.py  test_api.py  test_arm_angle_relative.py  test_assets.py  test_best_effort.py  test_collision.py  test_ik_core.py  test_rm75_regression.py  test_robot_model.py  test_safety.py  test_tool_frame.py  test_tool_offset.py
ikt_interfaces/: CMakeLists.txt  README.md  package.xml
ikt_interfaces/msg/: IKResult.msg  IKTask.msg  PoseCommand.msg
ikt_interfaces/srv/: SolveIK.srv
ikt_inverse_kinematics/: IMPLEMENTATION_PLAN.md  README.md  package.xml  setup.cfg  setup.py
ikt_inverse_kinematics/config/: ik_defaults.yaml
ikt_inverse_kinematics/ikt_inverse_kinematics/: __init__.py  dashboard_node.py  ik_core.py  ik_node.py  marker_node.py  robot_model.py  solve_and_send.py  tasks.py
ikt_inverse_kinematics/ikt_inverse_kinematics/static/: app.js  dashboard.css  index.html
ikt_inverse_kinematics/launch/: dashboard.launch.py  ik.launch.py  ik_with_dashboard.launch.py
ikt_inverse_kinematics/test/: closed_loop_demo.py  test_arm_angle_relative.py  test_collision.py  test_ik_core.py  test_robot_model.py  validate_ik_node.py
ikt_pose_commander/: README.md  package.xml  setup.cfg  setup.py
ikt_pose_commander/config/: commander_defaults.yaml
ikt_pose_commander/ikt_pose_commander/: __init__.py  commander_node.py  dashboard_node.py  send_pose.py  trajectory.py
ikt_pose_commander/ikt_pose_commander/static/: dashboard.css  dashboard.js  index.html  viewer.js
ikt_pose_commander/launch/: commander.launch.py  dashboard.launch.py
ikt_pose_commander/test/: test_trajectory.py
