<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ikt_pose_commander</name>
  <version>0.1.0</version>
  <description>
    Target-pose -> joint motion bridge for the cartesian_controllers_toolkit.
    A node that accepts a Cartesian target pose on a topic, solves it with the
    advisory ikt_inverse_kinematics solver (in-process), and ACTUALLY drives the
    arm — either by sending a single speed-limited trajectory to the arm's
    JointTrajectoryController (default, safe) or by streaming joint setpoints to
    its forward_position_controller (optional). Unlike the IK package, this node
    commands the robot; it is therefore safety-gated (starts disabled, rejects
    unreachable / large-jump solutions, limits speed, and holds on stale input).
  </description>

  <maintainer email="yizhongzhang1989@gmail.com">yizhongzhang</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>ikt_core</exec_depend>
  <exec_depend>ikt_interfaces</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
